<resources>
    <string name="app_name">Quwi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="dont_have_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="all_projects">All projects</string>
    <string name="please_wait">please wait</string>
    <string name="email_cannot_be_blank">Email cannot be blank</string>
    <string name="password_cannot_be_blank">Password cannot be blank</string>
</resources>
